--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Arrays</title>
 </head>
 <body>
-    <script src="arrays.js"></script>
+    <script src="forLoop.js"></script>
 </body>
 </html>
